2015-02-20  Andreas Arnez  <arnez@linux.vnet.ibm.com>

	* common.h (NT_S390_VXRS_LOW): New macro.
	(NT_S390_VXRS_HIGH): Likewise.

2015-01-28  James Bowman  <james.bowman@ftdichip.com>

	* common.h (EM_FT32): Define.
	* ft32.h: New file.

2015-01-09  Anthony Green  <green@moxielogic.com>

	* common.h (EM_MOXIE): Redefine to official number.
	(EM_MOXIE_OLD): Define (from old number).

2015-01-01  Alan Modra  <amodra@gmail.com>

	Update year range in copyright notice of all files.

2014-12-25  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	* arm.h: New AEABI_FP_number_model_* and AEABI_VFP_args_* enum values.

2014-12-06  Eric Botcazou  <ebotcazou@adacore.com>

	* common.h (EM_VISIUM): Define.
	* visium.h: New file.

2014-11-13  H.J. Lu  <hongjiu.lu@intel.com>

	* x86-64.h (R_X86_64_GOTPLT64): Mark it obsolete.

2014-10-17  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* sparc.h (ELF_SPARC_HWCAP2_VIS3B): Documentation improved.

2014-10-09  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* sparc.h (Tag_GNU_Sparc_HWCAPS2): New object attribute.
	(ELF_SPARC_HWCAP2_FJATHPLUS): New HWCAP2 bitmask value.
	(ELF_SPARC_HWCAP2_VIS3B): Likewise.
	(ELF_SPARC_HWCAP2_ADP): Likewise.
	(ELF_SPARC_HWCAP2_SPARC5): Likewise.
	(ELF_SPARC_HWCAP2_MWAIT): Likewise.
	(ELF_SPARC_HWCAP2_XMPMUL): Likewise.
	(ELF_SPARC_HWCAP2_XMONT): Likewise.
	(ELF_SPARC_HWCAP2_NSEC): Likewise.
	(ELF_SPARC_HWCAP2_FJATHHPC): Likewise.
	(ELF_SPARC_HWCAP2_FJDES): Likewise.
	(ELF_SPARC_HWCAP2_FJAES): Likewise.

2014-10-08  Will Newton  <will.newton@linaro.org>

	* aarch64.h: Sync up relocations with ABI release 1.0.

2014-09-16  Kuan-Lin Chen  <kuanlinchentw@gmail.com>

	* nds32.h: Declare new relocations.

2014-09-15  Andrew Bennett  <andrew.bennett@imgtec.com>
	    Matthew Fortune  <matthew.fortune@imgtec.com>

	* mips.h: Add relocs: R_MIPS_PC21_S2, R_MIPS_PC26_S2, R_MIPS_PC18_S3,
	R_MIPS_PC19_S2, R_MIPS_PCHI16 and R_MIPS_PCLO16.
	(E_MIPS_ARCH_32R6): New define.
	(E_MIPS_ARCH_64R6): New define.
